--- a/Code/style/style.css
+++ b/Code/style/style.css
@@ -11,6 +11,8 @@
     text-align: center;
     font-size: 18px;
 }
+
+/*Menù style*/
 li.bg {
  background-color: #33cc33;
  color: white;
@@ -57,6 +59,8 @@ li:not(.bg) a:hover:not(.bg) {
     background-color: #111
     ;
 }
+
+/*Other style*/
 .altro {
     color: white;
     font-family: Architects Daughter; 
@@ -95,7 +99,9 @@ div.centrato {
   left: 50%;
   margin: -200px 0px 0px -250px;
 }
-/*contenitore*/
+
+/*	Style for post	*/
+/*content*/
 .content {
 	margin: 10% 2%;
 	border-radius: 25px;
