--- a/Code/style/navbar.css
+++ b/Code/style/navbar.css
@@ -13,6 +13,7 @@ html {scroll-behavior: smooth;}
 	height: 8%;
 	width: 100%;
 	padding: 10px 5px;
+	box-sizing: initial;
 	
 	background: #fff;
 	box-shadow: 0px 5px 10px #5555;
