--- a/Code/style/input.css
+++ b/Code/style/input.css
@@ -1,29 +1,30 @@
+input[type=text],
+input[type=email],
+input[type=password],
+input[type=url],
+input[type=tel],
+textarea {
+    border: none;
+    border: 2px solid #33cc33;
+	box-shadow: none;
+	border-radius: 5px;
+	padding: 5px;
+}
+textarea {border-radius: 5px; padding: 15px;}
 
-input[type=text] {
-    border: none;
-    border-bottom: 1px solid #33cc33;
-}
-input[type=text]:focus:hover {
-    border: none;
-    border-bottom: 1px solid #33cc33;
-}
-
-input[type=email] {
-    border: none;
-    border-bottom: 1px solid #33cc33;
-}
-input[type=email]:focus:hover {
-    border: none;
-    border-bottom: 1px solid #33cc33;
-}
-
-input[type=password] {
-    border: none;
-    border-bottom: 1px solid #33cc33;
-} 
-input[type=password]:focus:hover {
-    border: none;
-    border-bottom: 1px solid #33cc33;
+input[type=text]:hover,
+input[type=email]:hover,
+input[type=password]:hover,
+input[type=url]:hover,
+input[type=tel]:hover,
+textarea:hover,
+input[type=text]:focus,
+input[type=email]:focus,
+input[type=password]:focus,
+input[type=url]:focus,
+input[type=tel]:focus,
+textarea:focus {
+    box-shadow: 0 0 0 .2rem #55ee55;
 }
 	
 input[type=reset] {
@@ -35,6 +36,7 @@ input[type=reset] {
     text-decoration: none;
     display: inline-block;
     font-size: 16px;
+	border-radius: 5px;
 	-moz-transition-property: background-color , color;
 	-moz-transition-duration: 0.5s , 0.5s;
     -o-transition-property: background-color , color;
@@ -58,6 +60,7 @@ input[type=submit] {
     display: inline-block;
     font-size: 16px;
 	border-collapse: 5px;
+	border-radius: 5px;
 	-moz-transition-property: background-color , color;
 	-moz-transition-duration: 0.5s , 0.5s;
     -o-transition-property: background-color , color;
