--- a/Code/style/navbar.css
+++ b/Code/style/navbar.css
@@ -8,8 +8,8 @@
 */
 
 .navbar {
-	height: 8%;
-	width: 100%;
+	height: 8vh;
+	width: 100vw;
 	padding: 10px 5px;
 	box-sizing: initial;
 	
@@ -19,7 +19,7 @@
 	position: fixed;
 	top: 0;
 	left: 0;
-	z-index: 1;
+	z-index: 10;
 	
 	font-family: 'Roboto', sans-serif;
 	text-decoration: none;
