--- a/Code/style/stylePost.css
+++ b/Code/style/stylePost.css
@@ -114,6 +114,20 @@
 	z-index: 1;
 	font-family: 'Prompt';
 }
+.comment > .menu {
+	float: unset;
+	display: inline-block;
+}
+.comment > .menu .menu-btn {
+	position: unset;
+	color: #000a;
+	display: inline;
+}
+.comment > .menu .menu-content {
+	left: -5px;
+	top: -10px;
+	right: unset;
+}
 .menu .menu-content a {
   color: black;
   padding: 12px 16px;
