--- a/Code/style/stylePost.css
+++ b/Code/style/stylePost.css
@@ -27,6 +27,10 @@
 	margin-right: 150px;
     font-size: 15px;
 }
+.text img {
+	max-height: 120px;
+	max-width: 100%;
+}
 /*Info*/
 .info {
 	font-size: 12px;
